# sammy

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  setup.py  tests.py
.github/workflows/: main.yml
sammy/: __init__.py  custom_properties.py  exceptions.py  tests.py
sammy/examples/: alexa_skill.py  api_backend.py  hello_world.py  layers.py  updated_api.py  updated_function.py
sammy/examples/yaml/: alexa_skill.yaml  api_backend.yaml  hello_world.yaml  updated_api.yaml  updated_function.yaml
