[tool.poetry]
name = "sammy"
version = "0.1.0"
description = "Python library for generating AWS SAM (Serverless Application Model) templates with validation."
authors = ["Brian Jinwright"]

[tool.poetry.dependencies]
python = "^3.7"
boto3 = ">=1.9.93"
PyYAML = ">=3.12"
valley = ">=1.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
